--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,12 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+
+  database: revius
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  host: rds-mysql-revius-server.cveqjlbarpwe.ap-northeast-1.rds.amazonaws.com
+  username: root
+  password: sakuraflower39
